correccion service por offering